@@ -28,27 +28,28 @@ def crash_guard(callback, bug_report_url, version):
     When something bad happens prints a long error message
     with bug report information and exits the program"""
     try:
-        callback()
-    except Exception, ex:
-        print >>sys.stderr, _("Sorry, command-not-found has crashed! Please file a bug report at:")
-        print >>sys.stderr, bug_report_url
-        print >>sys.stderr, _("Please include the following information with the report:")
-        print >>sys.stderr
-        print >>sys.stderr, _("command-not-found version: %s") % version
-        print >>sys.stderr, _("Python version: %d.%d.%d %s %d") % sys.version_info
         try:
-            import subprocess
-            subprocess.call(["lsb_release", "-i", "-d", "-r", "-c"], stdout=sys.stderr)
-        except (ImportError, OSError):
-            pass
-        print >>sys.stderr, _("Exception information:")
-        print >>sys.stderr
-        print >>sys.stderr, ex
-        try:
-            import traceback
-            traceback.print_exc()
-        except ImportError:
-            pass
+            callback()
+        except Exception, ex:
+            print >>sys.stderr, _("Sorry, command-not-found has crashed! Please file a bug report at:")
+            print >>sys.stderr, bug_report_url
+            print >>sys.stderr, _("Please include the following information with the report:")
+            print >>sys.stderr
+            print >>sys.stderr, _("command-not-found version: %s") % version
+            print >>sys.stderr, _("Python version: %d.%d.%d %s %d") % sys.version_info
+            try:
+                import subprocess
+                subprocess.call(["lsb_release", "-i", "-d", "-r", "-c"], stdout=sys.stderr)
+            except (ImportError, OSError):
+                pass
+            print >>sys.stderr, _("Exception information:")
+            print >>sys.stderr
+            print >>sys.stderr, ex
+            try:
+                import traceback
+                traceback.print_exc()
+            except ImportError:
+                pass
     finally:
         sys.exit(127)
 
